--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,9 +27,6 @@ jobs:
       CKAN_DATASTORE_READ_URL: postgresql://datastore_read:pass@postgres/datastore_test
       CKAN_SOLR_URL: http://solr:8983/solr/ckan
       CKAN_REDIS_URL: redis://redis:6379/1
-      CKANEXT__BANKOFENGLAND__HASURA_URL: ''
-      CKANEXT__BANKOFENGLAND__HASURA_DB: ''
-      CKANEXT__BANKOFENGLAND__HASURA_ADMIN_KEY: ''
 
     steps:
     - uses: actions/checkout@v2
@@ -44,6 +41,11 @@ jobs:
       run: |
         # Replace default path to CKAN core config file with the one on the container
         sed -i -e 's/use = config:.*/use = config:\/srv\/app\/src\/ckan\/test-core.ini/' test.ini
+
+        # Add extension env variables for tests
+        ckan config-tool /srv/app/ckan.ini -e "ckanext.bankofengland.hasura_url = true"
+        ckan config-tool /srv/app/ckan.ini -e "ckanext.bankofengland.hasura_admin_key = true"
+        ckan config-tool /srv/app/ckan.ini -e "ckanext.bankofengland.hasura_db = true"
 
         ckan -c test.ini db init
     - name: Run tests
