--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,11 @@ jobs:
     - name: Install requirements
       # Install any extra requirements your extension has here (dev requirements, other extensions etc)
       run: |
+        # Add extension env variables for tests
+        ckan config-tool /srv/app/ckan.ini -s app:main -e ckanext.bankofengland.hasura_url=true
+        ckan config-tool /srv/app/ckan.ini -s app:main -e ckanext.bankofengland.hasura_admin_key=true
+        ckan config-tool /srv/app/ckan.ini -s app:main -e ckanext.bankofengland.hasura_db=true
+
         pip install -r requirements.txt
         pip install -r dev-requirements.txt
         pip install -e .
@@ -41,11 +46,6 @@ jobs:
       run: |
         # Replace default path to CKAN core config file with the one on the container
         sed -i -e 's/use = config:.*/use = config:\/srv\/app\/src\/ckan\/test-core.ini/' test.ini
-
-        # Add extension env variables for tests
-        ckan config-tool /srv/app/ckan.ini -e "ckanext.bankofengland.hasura_url = true"
-        ckan config-tool /srv/app/ckan.ini -e "ckanext.bankofengland.hasura_admin_key = true"
-        ckan config-tool /srv/app/ckan.ini -e "ckanext.bankofengland.hasura_db = true"
 
         ckan -c test.ini db init
     - name: Run tests
