--- a/test.ini
+++ b/test.ini
@@ -10,6 +10,9 @@ use = config:../../src/ckan/test-core.ini
 # tests here. These will override the one defined in CKAN core's test-core.ini
 ckan.plugins = bankofengland
 
+ckanext.bankofengland.hasura_url = true
+ckanext.bankofengland.hasura_admin_key = true
+ckanext.bankofengland.hasura_db = true
 
 # Logging configuration
 [loggers]
